--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -26,7 +26,11 @@ jobs:
       uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}    
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+          node-version: '20'    
     - name: Install dependencies
       run: |
           cd repo/web
